bugfix: Adds delete metadata functionality back